--- a/BeastTuners/Views/Parts/Index.cshtml
+++ b/BeastTuners/Views/Parts/Index.cshtml
@@ -61,11 +61,13 @@
                     }
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.PartID" class="btn btn-warning btn-sm">Edit</a>
-                    <a asp-action="Details" asp-route-id="@item.PartID" class="btn btn-info btn-sm">Details</a>
-                    <a asp-action="Delete" asp-route-id="@item.PartID" class="btn btn-danger btn-sm">Delete</a>
 
-                    
+                    <a asp-action="Details" asp-route-id="@item.PartID" class="btn btn-info btn-sm">Details</a>
+                    @if (User.IsInRole("Employee") || User.IsInRole("Manager") || User.IsInRole("Staff") || User.IsInRole("Receptionist"))
+                    {
+                        <a asp-action="Delete" asp-route-id="@item.PartID" class="btn btn-danger btn-sm">Delete</a>
+                        <a asp-action="Edit" asp-route-id="@item.PartID" class="btn btn-warning btn-sm">Edit</a>
+                    }
                     <form asp-action="AddToCart" method="post" class="d-inline">
                         <input type="hidden" name="id" value="@item.PartID" />
                         <input type="number" name="quantity" value="1" min="1" class="form-control d-inline w-25" />
