updated engine page

--- a/BeastTuners/Views/Home/Index.cshtml
+++ b/BeastTuners/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <!-- Background -->
 <div class="hero-section">
     <div class="hero-overlay"></div>
-    <div class="container text-center hero-content">
+    <div class="container-fluid text-center hero-content">
         <h1 class="display-3 font-weight-bold text-white">BEAST TUNERS</h1>
         <p class="lead text-light">Premium Automotive Parts & Performance Solutions</p>
         <div class="hero-scroll-indicator">
@@ -28,7 +28,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="category-card">
                     <div class="category-img-container">
-                        <img src="~/images/Enginecam.jpg" class="category-img" alt="Engine">
+                        <img src="~/images/NismoEngine.jpg" class="category-img" alt="Engine">
                         <div class="category-overlay"></div>
                     </div>
                     <div class="category-content">
