--- a/BeastTuners/Views/Parts/Category.cshtml
+++ b/BeastTuners/Views/Parts/Category.cshtml
@@ -38,10 +38,12 @@
                     }
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.PartID" class="btn btn-warning btn-sm">Edit</a>
                     <a asp-action="Details" asp-route-id="@item.PartID" class="btn btn-info btn-sm">Details</a>
-                    <a asp-action="Delete" asp-route-id="@item.PartID" class="btn btn-danger btn-sm">Delete</a>
-
+                    @if (User.IsInRole("Employee") || User.IsInRole("Manager") || User.IsInRole("Staff") || User.IsInRole("Receptionist"))
+                    {
+                        <a asp-action="Delete" asp-route-id="@item.PartID" class="btn btn-danger btn-sm">Delete</a>
+                        <a asp-action="Edit" asp-route-id="@item.PartID" class="btn btn-warning btn-sm">Edit</a>
+                    }
                     
                     <form asp-action="AddToCart" method="post" class="d-inline">
                         <input type="hidden" name="id" value="@item.PartID" />
@@ -53,7 +55,9 @@
         }
     </tbody>
 </table>
-
+  @if (User.IsInRole("Employee") || User.IsInRole("Manager") || User.IsInRole("Staff") || User.IsInRole("Receptionist"))
+                    {
 <p>
     <a asp-action="Create" class="btn btn-success">Create New Part</a>
 </p>
+                    }
